--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body>
-		<div class="postcard">
-            <div class="postcard-header"></div>
-            <h1>My postcard</h1>
-            <img src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png">
-            <div class="postcard-body">
-                <div class="body-left">
-                    <p class="no-margin">Look how awesome! This is a postard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
-                        <p>This is so cool, can't wait to start doing more stuff</p>
-                </div>
+   <head>
+       <meta charset="UTF-8" />
+       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <title>Document</title>
 
-                <div class="body-right">
-                    <input type="text"
-                    placeholder="Some Name" />
-                    <input type="text"
-                    placeholder="Some Emait" />
-                    <input type="text"
-                    placeholder="Some comment" />
-                    </div>
-            </div>
-            <div class="postcard-footer"></div>
-            <button>Send My Postcard</button>
-        </div>
-	</body>
+
+       <link rel="preconnect" href="https://fonts.googleapis.com" />
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+       <link
+           href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playpen+Sans:wght@100..800&display=swap"
+           rel="stylesheet"
+       />
+       <link rel="stylesheet" href="styles.css" />
+   </head>
+
+
+   <body>
+       <div class="postcard">
+           <div class="postcard-header">
+               <h1>My Postcard</h1>
+               <img
+                   src="https://storage.googleapis.com/breathecode-asset-images/5318bde604cf5c915f94897a71b49ab2523101322ea21cb046db1e67c24fa3be.png?raw=true"
+               />
+           </div>
+
+
+           <div class="postcard-body">
+               <div class="body-left">
+                   <p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+                   <p>This is so cool, can't wait to start doing more stuff!</p>
+               </div>
+               <div class="body-right">
+                   <input type="text" placeholder="Some Name" />
+                   <input type="text" placeholder="Some Email" />
+                   <input type="text" placeholder="Some Comment" />
+               </div>
+           </div>
+
+
+           <div class="postcard-footer">
+               <button>Send My Postcard</button>
+           </div>
+       </div>
+   </body>
 </html>
-
